Wip - settings intelligence
Change-Id: I05aa4fd7b29a68e33999107fad2a4f8b7d91f3cf

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -20,4 +20,8 @@
     <declare-styleable name="Preference">
         <attr name="keywords" format="string" />
     </declare-styleable>
+    <attr name="mtrlLinearBarHeight" format="reference|dimension">
+    </attr>
+    <attr name="mtrlLinearBarInset" format="reference|dimension">
+    </attr>
 </resources>
