--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,10 +16,16 @@
   -->
 
 <resources>
-    <style name="Theme.Settings" parent="@style/Theme.MaterialComponents.DayNight"/>
-
-    <style name="Theme.Settings.NoActionBar">
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
+    <style name="SearchBarStyle">
+        <item name="cardBackgroundColor">?android:attr/colorBackground</item>
+    </style>
+    <style name="SearchViewStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?android:attr/textColorSecondary</item>
+        <item name="android:fontFamily">google-sans</item>
+    </style>
+    <style name="SearchLoadingProgressBar">
+        <item name="mtrlLinearBarHeight">4dp</item>
+        <item name="mtrlLinearBarInset">0dp</item>
     </style>
 </resources>
